vendorizing openssh and baseline roles (#7)

--- a/ansible/roles/artifactory_config/templates/artifactory.config.import.yml.j2
+++ b/ansible/roles/artifactory_config/templates/artifactory.config.import.yml.j2
@@ -19,31 +19,31 @@ version: 1
 ##
 ## To have any of these parameters automatically configured when you bootstrap an Artifactory instance using this file,
 ## simply uncomment the relevant sections below, and where required, provide values.
- 
+
 ##################################################################################
 # General Configurations #
 ##################################################################################
 GeneralConfiguration:
 ## License key to import in onboarding
-    licenseKey : "Enter your license key"
- 
+    licenseKey : "{{ artifactory_license }}"
+
 ## Setup the Artifactory base URL
 ## For more information about the Artifactory base URL, please refer to
 ## https://www.jfrog.com/confluence/display/RTF/Configuring+Artifactory#ConfiguringArtifactory-GeneralSettings
 ## Uncomment the line below to set the Artifactory base URL
     baseUrl : "https://{{ ansible_fqdn }}"
- 
+
 ## Configure proxies for artifactory
 ## For more information on configuring a proxy in Artifactory, please refer to
 ## https://www.jfrog.com/confluence/display/RTF/Managing+Proxies
 ## Uncomment the lines below to setup a proxy
-#   proxies :
-#       - key : "proxy1"
-#       host : "https://proxy.mycomp.io"
-#       port : 443
-#       userName : "admin"
-#       password : "password"
-#       platformDefault : true
+    proxies :
+       - key : "proxy"
+         host : "{{ artifactory_proxy_host }}"
+         port : "{{ artifactory_proxy_port }}"
+#         userName : "{{ artifactory_proxy_user }}"
+#         password : "{{ artifactory_proxy_password }}"
+         platformDefault : true
 #       services: "jfxr, jfrt" ## (Optional field. Comma separated string of services, options are: jfrt, jfmc, jfxr, jfds)
 #       - key : "proxy2"
 #       ...
