--- a/ansible/roles/kickstart/templates/ks.cfg.j2
+++ b/ansible/roles/kickstart/templates/ks.cfg.j2
@@ -18,26 +18,58 @@ repo --name="AppStream" --baseurl=http://{{ kickstart_server}}/{{ installation_s
 %post --erroronfail
 rm -f /etc/dconf/db/gdm.d/00-security-settings
 
+# permit root login via SSH with password authetication
+#mkdir /etc/ssh/sshd_config.d/
+#echo "PermitRootLogin yes" > /etc/ssh/sshd_config.d/01-permitrootlogin.conf
+
+# CIS 1.1.1.1
+echo 'blacklist cramfs' >> /etc/modprobe.d/cramfs.conf
+# CIS 1.1.1.2
+echo 'blacklist squashfs' >> /etc/modprobe.d/squashfs.conf
+# CIS 1.7.3
+echo "Authorized uses only. All activity may be monitored and reported." > /etc/issue.net
+# CIS 2.1.2
+echo "server {{ time_server }}" >> /etc/chrony.conf
+echo 'OPTIONS="-u chrony"' > /etc/sysconfig/chronyd
+# CIS 3.4.1.3
+systemctl --now mask nftables
+# CIS 4.2.2.4
+sed -i "s/Compress='yes'/Compress=yes/" /etc/systemd/journald.conf
+# CIS 4.2.2.3
+sed -i "s/Storage='persistent'/Storage=persistent/" /etc/systemd/journald.conf
+# CIS 4.2.3
+find /var/log/ -type f -perm /g+wx,o+rwx -exec chmod --changes g-wx,o-rwx "{}" +
+# CIS 5.1.8
+touch /etc/cron.allow  
+chown root:root /etc/cron.allow 
+chmod u-x,go-rwx /etc/cron.allow 
+# CIS 5.2.4
+echo 'AllowGroups wheel' >> /etc/ssh/sshd_config
+# CIS 5.2.15
+sed -i 's/^#Banner none/Banner \/etc\/issue.net/' /etc/ssh/sshd_config
+# CIS 5.2.20
+sed -i 's/^#ClientAliveInterval 0/ClientAliveInterval 900/' /etc/ssh/sshd_config
+# CIS 5.3.7
+groupadd sugroup
+sed -i 's/auth\s*required\s*pam_wheel.so*/auth\t\trequired\tpam_wheel.so use_uid group=sugroup/' /etc/pam.d/su
+
+# CIS 5.5.4
+sed -i 's/password\s*sufficient\s*pam_unix.so.*/password    sufficient    pam_unix.so try_first_pass use_authtok sha512 shadow/' /etc/pam.d/password-auth
+sed -i 's/password\s*sufficient\s*pam_unix.so.*/password    sufficient    pam_unix.so try_first_pass remember=5 use_authtok sha512 shadow/' /etc/pam.d/system-auth
+
+# CIS 5.6.3
+echo 'readonly TMOUT=900 ; export TMOUT' > /etc/profile.d/tmout.sh
+
+
 # /tmp is restricted by mount options
 mkdir /var/tmp
 chmod 1777 /var/tmp
-# add vagrant's public key - user can ssh without password
-echo "installing ssh-key for vagrant"
-mkdir -p /home/vagrant/.ssh
-chmod 0700 /home/vagrant/.ssh
-curl -q -o /home/vagrant/.ssh/authorized_keys https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant.pub
-chmod 0600 /home/vagrant/.ssh/authorized_keys
-chown -R vagrant:vagrant /home/vagrant/.ssh
-restorecon -R -v /home/vagrant/.ssh
 
-# permit root login via SSH with password authetication
-echo "PermitRootLogin yes" > /etc/ssh/sshd_config.d/01-permitrootlogin.conf
+mkdir -p /home/{{ main_user }}/.ssh
+chown {{ main_user }}:{{ main_user }} /home/{{ main_user }}/.ssh
+chmod 0700 /home/{{ main_user }}/.ssh
+restorecon -R -v /home/{{ main_user }}/.ssh
 
-# allow vagrant user to run everything without a password
-echo "vagrant     ALL=(ALL)     NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
-
-# see Vagrant documentation (https://docs.vagrantup.com/v2/boxes/base.html)
-# for details about the requiretty.
 sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
 
 %end
@@ -59,7 +91,6 @@ usermode
 -iwl*-firmware
 -langpacks-*
 -mdadm
--open-vm-tools
 -plymouth
 -rhn*
 %end
@@ -87,7 +118,6 @@ firstboot --disable
 skipx
 # System services
 services --enabled="NetworkManager,sshd"
-
 ignoredisk --only-use=sda
 
 # Partition information
@@ -108,7 +138,7 @@ volgroup vgsys pv.01
 # Create particular logical volumes (optional)
 logvol / --fstype=xfs --name=lv_root --vgname=vgsys --size=4096 --grow
 # rhel8cis_rule_1_1_7: Ensure /home Located On Separate Partition
-logvol /home --fstype=xfs --name=lv_home --vgname=vgsys --size=1024 --fsoptions="nodev" --grow
+logvol /home --fstype=xfs --name=lv_home --vgname=vgsys --size=1024 --fsoptions="nodev,usrquota,grpquota" --grow
 # rhel8cis_rule_1_1_2: Ensure /tmp Located On Separate Partition
 logvol /tmp --fstype=xfs --name=lv_tmp --vgname=vgsys --size=1024 --fsoptions="nodev,noexec,nosuid"
 # rhel8cis_rule_1_1_3: Ensure /var Located On Separate Partition
@@ -125,7 +155,7 @@ logvol swap --name=lv_swap --vgname=vgsys --size=2016
 timezone UTC --utc
 
 # Root password
-rootpw --iscrypted {{ main_password | password_hash('sha512') }}
+# rootpw --iscrypted {{ main_password | password_hash('sha512') }}
 user --groups=wheel --name={{ main_user }} --iscrypted --password={{ main_password | password_hash('sha512') }}
 
 # The OpenSCAP installer add-on is used to apply SCAP (Security Content Automation Protocol)
@@ -145,9 +175,7 @@ user --groups=wheel --name={{ main_user }} --iscrypted --password={{ main_passwo
 
 # This PAM policy is used in development
 %anaconda
-pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
+#pwpolicy root --minlen=14 --minquality=1 --notstrict --nochanges --notempty
+pwpolicy user --minlen=14 --minquality=1 --notstrict --nochanges --notempty
+pwpolicy luks --minlen=14 --minquality=1 --notstrict --nochanges --notempty
 %end
-
-
