--- a/ansible/roles/dhcp_setup/templates/dhcpd.j2
+++ b/ansible/roles/dhcp_setup/templates/dhcpd.j2
@@ -34,6 +34,8 @@ subnet 192.168.56.0 netmask 255.255.255.0 {
 # network here
 subnet 192.168.178.0 netmask 255.255.255.0 {
 }
+subnet 192.168.179.0 netmask 255.255.255.0 {
+}
 subnet 192.168.100.0 netmask 255.255.255.0 {
 }
 subnet 192.168.1.0 netmask 255.255.255.0 {
