--- a/ansible/roles/tftp_setup/templates/override.j2
+++ b/ansible/roles/tftp_setup/templates/override.j2
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/sbin/in.tftpd -s {{ tftpboot_folder }} -vv -u {{ TFTP_user }} -B 1468 --ipv4 --timeout 300
+ExecStart=/usr/sbin/in.tftpd -s {{ tftpboot_folder }} -vv -u {{ tftp_user }} -B 1468 --ipv4 --timeout 300
